--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,27 @@
-version: "3.8"
-
 services:
   timemachine:
-    build: .
-    container_name: timemachine
-    restart: unless-stopped
-    network_mode: host
+    network_mode: "host"
     environment:
       - TM_USERNAME=${TM_USERNAME:-tmuser}
+      - TM_GROUPNAME=${TM_GROUPNAME:-timemachine}
       - PASSWORD=${TM_PASSWORD:-tmpassword}
-      - TM_VOLUME_NAME=${TM_VOLUME_NAME:-TimeMachine}
-      - VOLUME_SIZE_LIMIT=${TM_VOLUME_SIZE_LIMIT:-750G}
+      - TM_UID=1000
+      - TM_GID=1000
+      - SET_PERMISSIONS=false
+      - VOLUME_SIZE_LIMIT=750G
+    restart: unless-stopped
+    ports:
+      - "137:137/udp"
+      - "138:138/udp"
+      - "139:139"
+      - "445:445"
     volumes:
       - /mnt/timemachine/backups:/opt/timemachine
+    tmpfs:
+      - /run/samba
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+    container_name: timemachine
+    image: mbentley/timemachine:smb
